Codacy fixes #8565 String.trim().length() == 0 / String.trim().isEmpty() is an inefficient way to validate a blank String.